--- a/autoconfigure/storage-scouter-udp-conf/pom.xml
+++ b/autoconfigure/storage-scouter-udp-conf/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>io.github.scouter-project</groupId>
         <artifactId>zipkin-autoconfigure-scouter</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
 
     <artifactId>zipkin-autoconfigure-storage-scouter-udp</artifactId>
