--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.scouter-project</groupId>
     <artifactId>zipkin-scouter-parent</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -39,13 +39,13 @@
 
     <issueManagement>
         <system>github.com</system>
-        <url>https://github.com/scouter-project/scouter/issues</url>
+        <url>https://github.com/scouter-project/zipkin-scouter/issues</url>
     </issueManagement>
 
     <scm>
-        <connection>scm:git:git@github.com:scouter-project/scouter.git</connection>
-        <developerConnection>scm:git:git@github.com:scouter-project/scouter.git</developerConnection>
-        <url>git@github.com:scouter-project/scouter.git</url>
+        <connection>scm:git:git@github.com:scouter-project/zipkin-scouter.git</connection>
+        <developerConnection>scm:git:git@github.com:scouter-project/zipkin-scouter.git</developerConnection>
+        <url>git@github.com:scouter-project/zipkin-scouter.git</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -212,7 +212,8 @@
                     <executions>
                         <execution>
                             <id>sign-artifacts</id>
-                            <phase>deploy</phase>
+                            <!--<phase>deploy</phase>-->
+                            <phase>verify</phase>
                             <goals>
                                 <goal>sign</goal>
                             </goals>
