--- a/storage-scouter-udp/pom.xml
+++ b/storage-scouter-udp/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>io.github.scouter-project</groupId>
         <artifactId>zipkin-scouter-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
 
     <artifactId>zipkin-storage-scouter-udp</artifactId>
