--- a/autoconfigure/pom.xml
+++ b/autoconfigure/pom.xml
@@ -21,12 +21,15 @@
     <parent>
         <groupId>io.github.scouter-project</groupId>
         <artifactId>zipkin-scouter-parent</artifactId>
-        <version>0.9.0</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>zipkin-autoconfigure-scouter</artifactId>
-    <name>Auto Configuration</name>
     <packaging>pom</packaging>
+
+    <name>Zipkin Scouter Autoconfigure(Parent)</name>
+    <description>Zipkin Scouter Autoconfigure(Parent)</description>
+    <url>https://github.com/scouter-project/zipkin-scouter</url>
 
     <properties>
         <main.basedir>${project.basedir}/..</main.basedir>
