--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.scouter-project</groupId>
     <artifactId>zipkin-scouter-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <packaging>pom</packaging>
 
     <name>Zipkin Scouter (Parent)</name>
@@ -66,7 +66,7 @@
         <log4j.version>2.11.1</log4j.version>
 
         <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
-        <scouter.version>2.1.0.SNAPSHOT</scouter.version>
+        <scouter.version>2.5.0</scouter.version>
     </properties>
     
     <distributionManagement>
